--- a/tambahdatatabungan.css
+++ b/tambahdatatabungan.css
@@ -54,7 +54,7 @@
     font-weight: bold;
     background-color: #A1C5FB;
     box-shadow: 2px 2px 4px rgba(138, 137, 137, 0.2);
-    margin-top: 20px;
+    
     
     
     
@@ -72,5 +72,6 @@ ul p:hover i{
     transition: .500s;
 }
 .container-2{
-    margin-bottom: 10px;
+    margin-left: 680px;
+    margin-top: -500px;
 }
