--- a/tambahdatatabungan.css
+++ b/tambahdatatabungan.css
@@ -54,6 +54,7 @@
     font-weight: bold;
     background-color: #A1C5FB;
     box-shadow: 2px 2px 4px rgba(138, 137, 137, 0.2);
+    margin-top: 4px;
     
     
     
@@ -71,7 +72,49 @@ ul p:hover i{
     padding-left: 50px;
     transition: .500s;
 }
+
+/* input */
 .container-2{
-    margin-left: 680px;
-    margin-top: -500px;
+    margin-bottom: 10px;
+}
+
+.tambah-berita h3{ 
+    margin-left: 700px; 
+    font-size: 30px; 
+    margin-top: -650px; 
+    font-weight: 700;
+} 
+ 
+.data1 label{ 
+    margin-left: 500px; 
+    margin-top: 50px; 
+    display: flex; 
+    font-size: 25px; 
+    font-weight: bold;
+} 
+ 
+.container-2 input{ 
+    position: absolute; 
+    margin-left: 750px; 
+    margin-top: -25px; 
+    border-radius: 10px; 
+    width: 400px; 
+    height: 30px; 
+    background-color: #D9D9D9; 
+}
+.simpan-berita input{
+    display: flex;
+    justify-content: center;
+    background-color: #74B9FF;
+    border: none;
+    border-radius: 15px;
+    width: 95px;
+    height: 31px;
+    margin: 30px;
+    font-size: 16px;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: bold;
+    margin-left: 62%;
+    box-shadow: 2px 2px 5px rgba(0 , 0, 0, 0.2);
+    
 }
