--- a/tambahdatatabungan.css
+++ b/tambahdatatabungan.css
@@ -76,6 +76,8 @@ ul p:hover i{
 /* input */
 .container-2{
     margin-bottom: 10px;
+    margin-top: 110px;
+    margin-left: 51px;
 }
 
 .tambah-berita h3{ 
