--- a/tambahdatatabungan.css
+++ b/tambahdatatabungan.css
@@ -1,6 +1,7 @@
 *{ 
     margin: 0; 
     padding: 0; 
+    font-family: 'Montserrat', sans-serif;
 } 
 .navbar{
     width: 100%;
@@ -76,6 +77,8 @@ ul p:hover i{
 /* input */
 .container-2{
     margin-bottom: 10px;
+    margin-top: 110px;
+    margin-left: 5px;
 }
 
 .tambah-berita h3{ 
